<?xml version="1.0" encoding="utf-8"?>
<!-- Teste di atualização na branch Front-End -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".controller.MainActivity">

    <!-- AppBar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecundary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewBar_main"
            style="@style/ImageViewForm_barMainActivity" />

        <TextView
            android:id="@+id/txt_titulo_toolBar_main"
            style="@style/TextViewForm_barMainActivity"
            android:layout_marginStart="40dp"
            android:ellipsize="end"
            android:fontFamily="@font/cavolini_condensed"
            android:text="@string/app_name"
            android:textColor="#FFFFFF" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txt_main_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/cavolini_condensed"
        android:gravity="center_horizontal"
        android:text="@string/titulo_cadastrarCarro"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar_main" />

    <!-- FORMULÁRIO -->
    <LinearLayout
        android:id="@+id/layout_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="90dp"
        android:background="#B0F1EF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_verRegistros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_main_titulo">

        <EditText
            android:id="@+id/editText_main_name"
            style="@style/EditTextForm"
            android:hint="@string/nomeDoCarro"
            android:maxLength="20" />

        <EditText
            android:id="@+id/editText_main_placa"
            style="@style/EditTextForm"
            android:layout_marginTop="20dp"
            android:hint="@string/placa"
            android:inputType="textCapCharacters"
            android:maxLength="7" />

        <Button
            android:id="@+id/btn_main_cadastro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_cadastro"
            android:text="@string/cadastrarCarro"
            android:textColor="@color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_main_cancelar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_cancel_24"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#ff7539" />

    <Button
        android:id="@+id/btn_main_verRegistros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorSecundaryVariant"
        android:text="@string/verVeiculos"
        android:textColor="#ff7539"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
